ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* New `luv_colours` dataset which contains the locations of all
  built-in `colors()` in Luv space.

* `scale_*_gradient2()` defaults to using Lab colour space.

* `scale_fill_grey()` now uses red for missing values. This matches
  `scale_colour_grey()` and makes it obvious where missing values lie.
  Control with `na.value`.

* `geom_label()` works like `geom_text()` but draws a solid background
  behind each label (#1039).

* `stat_bindot()` has been removed because it's so tightly coupled to
  `geom_dotplot()`. If you happened to use `stat_bindot()`, just change to
  `geom_dotplot()` (#1194).

* Character labels in `facet_grid()` are no longer (incorrectly) coerced into
  factors. This caused problems with custom label functions (#1070).

* `scale_y_continuous()` now also transforms the `lower`, `middle` and `upper`
  aesthetics used by `geom_boxplot()`: this only affects
  `geom_boxplot(stat = "identity")` (#1020).

* `stat_summary_hex()` and `stat_summary2d()` no longer passes `...` on to their
  summary functions - instead they have a new argument `fun.args`, a list
  of arguments to pass on.

* The internals of positions have been cleaned up considerably. You're unlikely
  to notice any external changes, although the documentation should be a little
  less confusing since positions now don't list parameters they never use.

* You can now suppress the appearance of an axis/legend title (and the space
  that would allocated for it) with `NULL` in the `scale_` function. To
  use the default lable, use `waiver()` (#1145).

* `geom_bin2d()` will now let you specify one dimension's breaks exactly,
  without touching the other dimension's default breaks at all (#1126).

* `labels = NULL` now works with `guide_legend()` and `guide_colorbar()`.
  (#1175, #1183).

* Improved documentation for `aes()`, `layer()` and many geoms and scales. I've