@@ -245,6 +245,7 @@ export(coord_quickmap)
 export(coord_trans)
 export(cut_interval)
 export(cut_number)
+export(cut_width)
 export(discrete_scale)
 export(draw_key_abline)
 export(draw_key_blank)
