@@ -10,26 +10,17 @@
 #' @inheritParams geom_point
 #' @export
 #' @examples
-#' \donttest{
 #' # Generate data
 #' huron <- data.frame(year = 1875:1972, level = as.vector(LakeHuron))
-#' library(plyr) # to access round_any
-#' huron$decade <- round_any(huron$year, 10, floor)
-#'
-#' h <- ggplot(huron, aes(x=year))
+#' h <- ggplot(huron, aes(year))
 #'
 #' h + geom_ribbon(aes(ymin=0, ymax=level))
 #' h + geom_area(aes(y = level))
 #'
 #' # Add aesthetic mappings
-#' h + geom_ribbon(aes(ymin=level-1, ymax=level+1))
-#' h + geom_ribbon(aes(ymin=level-1, ymax=level+1)) + geom_line(aes(y=level))
-#'
-#' # Take out some values in the middle for an example of NA handling
-#' huron[huron$year > 1900 & huron$year < 1910, "level"] <- NA
-#' h <- ggplot(huron, aes(x=year))
-#' h + geom_ribbon(aes(ymin=level-1, ymax=level+1)) + geom_line(aes(y=level))
-#' }
+#' h +
+#'   geom_ribbon(aes(ymin = level - 1, ymax = level + 1), fill = "grey70") +
+#'   geom_line(aes(y = level))
 geom_ribbon <- function (mapping = NULL, data = NULL, stat = "identity",
   position = "identity", na.rm = FALSE, show_guide = NA, inherit.aes = TRUE, ...)
 {
