@@ -116,9 +116,7 @@ if (require("ggplot2movies")) {
 # Scale transformations occur before the density statistics are computed.
 # Coordinate transformations occur afterwards.  Observe the effect on the
 # number of outliers.
-library(plyr) # to access round_any
-m <- ggplot(movies, aes(y = votes, x = rating,
-   group = round_any(rating, 0.5)))
+m <- ggplot(movies, aes(y = votes, x = rating, group = cut_width(rating, 0.5)))
 m + geom_violin()
 m + geom_violin() + scale_y_log10()
 m + geom_violin() + coord_trans(y = "log10")
@@ -128,7 +126,7 @@ m + geom_violin() + scale_y_log10() + coord_trans(y = "log10")
 # Use the group aesthetic to group observations in violins
 ggplot(movies, aes(year, budget)) + geom_violin()
 ggplot(movies, aes(year, budget)) +
-  geom_violin(aes(group = round_any(year, 10, floor)))
+  geom_violin(aes(group = cut_width(year, 10)), scale = "width")
 }
 }
 }
